# hs-algorithms

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hs-bubble.cabal
app/: Main.hs
src/: Bubble.hs  MergeSort.hs  Quicksort.hs
