cabal-version:      3.0
name:               hs-algorithms
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             dylantf
maintainer:         dylantf@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Bubble,
        Quicksort,
        MergeSort
    build-depends:
      base ^>=4.20.0.0,
      vector
    hs-source-dirs:   src
    default-language: GHC2024

executable hs-algorithms
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
      base ^>=4.20.0.0,
      hs-algorithms

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2024
